Overlapping problems resolve

--- a/src/Home.css
+++ b/src/Home.css
@@ -13,13 +13,13 @@
         height: 180px;
         padding-right: 10px;
     }
-    p{
-        font-size:20px;
+    
         
     }
     .pColor{
-        color:#ffffff}
-} 
+        color:#ffffff;
+        font-size:20px;}
+
     
 @media screen and (max-width: 600px){
     .box-container{
@@ -36,16 +36,16 @@
         font-size: 30px;
         color:#F0F0F0;
     }
-    p{
-        font-size: 25px;
-        width:100vw;
-        text-align: center;
+        
     }
     .pColor{
-        color:#ffffff}
-}
+        color:#ffffff;
+        font-size: 25px;
+        width:100%;
+        text-align: center;}
+
 @media screen and (min-width:768px){
-    p{
+    .pColor{
         font-size: 30px;
     }
     .homeImg{
